--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     volumes:
       - '.:/app'
       - '/app/node_modules'
+      - './storage:/app/storage'
 
   db:
     image: mongo:4.4
